# gerenciaccr

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py
app/config/: database.py
app/routes/: auth.py  infantil.py  media.py  reservation.py  static.py  video.py
app/routes/video/: process.py
app/services/: auth_service.py  llm_service.py  reservation_service.py
src/gerencia_ccr/: __init__.py
src/gerencia_ccr/crews/: image_crew.py  ingest_crew.py  main.py  media_crew.py  posts_crew.py  request_flow.py
src/gerencia_ccr/crews/config/: agents.yaml  tasks.yaml
src/gerencia_ccr/web/: __init__.py  app.py
src/gerencia_ccr/web/models/: user.py
src/gerencia_ccr/web/routes/: auth.py  infantil.py  media.py  reservation.py  video.py
src/gerencia_ccr/web/routes/video/: __init__.py  process.py  search.py
src/gerencia_ccr/web/services/: email_service.py  llm_service.py
static/: dashboard.html  index.html
static/css/: dashboard.css  reservas.css  styles.css
static/js/: auth.js  create_post.js  dashboard.js  infantil.js  media.js  pregacoes.js  reservas.js  video.js
static/templates/: infantil.html  media.html  pregacoes.html  reservas.html  video.html
tests/: __init__.py  conftest.py
tests/crews/: test_crew.py
tests/web/: test_app.py  test_routes.py
